# SentinentalBERT

./: .env  .env.example  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE_DIAGRAM.md  CHANGE_CATALOG.md  CLEANUP_README.md  COMMIT_MESSAGE.md  COMMIT_SUMMARY.md  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_CHANGE_CATALOG.md  COMPREHENSIVE_TESTING_REPORT.md  CRITICAL_FLAWS_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOYMENT_SUCCESS_REPORT.md  DOCKER_BUILD_FIXES.md  DOCKER_COMPATIBILITY_SUMMARY.md  DOCKER_DEVELOPMENT_SUMMARY.md  Dockerfile.dashboard  Dockerfile.enhanced  Dockerfile.simple  Dockerfile.streamlit  ENHANCED_DOCKER_DEPLOYMENT_SUMMARY.md  ENHANCED_PLATFORM_SUMMARY.md  ENHANCED_TRACKING_README.md  EXECUTIVE_SUMMARY.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_SECURITY_TRANSFORMATION_SUMMARY.md  GCP_MIGRATION_GUIDE.md  GCP_MIGRATION_SUMMARY.md  HACKATHON_DEMO_GUIDE.md  INSIDEOUT_CHANGELOG.md  INSIDEOUT_INTEGRATION_GUIDE.md  InsideOut_Demo_Summary.md  LOCAL_POSTGRESQL_SETUP.md  MACOS_DEPLOYMENT_GUIDE.md  MACOS_DOCKER_FIX.md  Makefile  Makefile.enhanced  (+74 more)
INSIDEOUT_SECURE_SKELETON/: README.md  docker-compose.secure.yml
components/: evidence_collection_enhanced.py  geographic_spread_enhanced.py  influence_network_enhanced.py  realtime_search_enhanced.py  sentiment_behavior_enhanced.py  viral_timeline_enhanced.py
data/: enhanced_cache.db  (+2 more)
services/ingestion/: Cargo.toml  Dockerfile  config.toml
services/ingestion/src/: main.rs  models.rs
services/ingestion/src/api_connectors/: instagram.rs  mod.rs  reddit.rs  telegram.rs  twitter.rs  youtube.rs
(+106 files in other folders)
