[package]
name = "sentinel-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp"] }
kafka = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
async-trait = "0.1"
futures = "0.3"
governor = "0.5"
nonzero_ext = "0.3"

[dependencies.rdkafka]
version = "0.34"
features = ["cmake-build", "ssl-vendored", "gssapi-vendored", "libz-static", "curl-static"]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"